# booking-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/booking_mcp/: __init__.py  auth.py  config.py  db.py  mint_key.py  models.py  prompts.py  queries.py  resources.py  schemas.py  seed.py  server.py  tools.py  validation.py  workflow.py
tests/: conftest.py  test_audit.py  test_auth.py  test_concurrency.py  test_config.py  test_db.py  test_fuzz.py  test_http.py  test_resources.py  test_schema_contract.py  test_schema_drift.py  test_seed.py  test_server.py  test_tools.py  test_workflow.py
